force-app/src/objects/cpm__Schemas__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>cpm__Generator__c</fullName>
        <label>Generator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Identifier__c</fullName>
        <label>Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Processor__c</fullName>
        <label>Processor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Schemas</label>
</CustomObject>